@@ -1,3 +1,13 @@
+2009-07-02  Roland McGrath  <roland@redhat.com>
+
+	* dwarf_edit.cc: New file.
+	* Makefile.am (noinst_PROGRAMS, TESTS): Add it.
+	(dwarf_edit_SOURCES, dwarf_edit_LDADD): New variables.
+
+	* dwarf-print.cc (print_die): Templatify and move ...
+	* print-die.hh: ... here, new file.
+	* Makefile.am (noinst_HEADERS): New variable, add it.
+
 2009-07-01  Roland McGrath  <roland@redhat.com>
 
 	* run-dwarfcmp-self.sh: Run on dwarflint too.
